# irkki

./: .gitignore  Cargo.toml  Irkki.sln  README.md  release-plz.toml
.devcontainer/: devcontainer.json
.github/workflows/: build_and_test.yml  ci.yml
crates/irkki-cli/: Cargo.toml  README.md
crates/irkki-cli/src/: app.rs  chat_view.rs  main.rs  start_view.rs  wizard_view.rs
crates/irkki-cli/src/widget/: button.rs  button_widget.rs  header.rs  messages.rs  mod.rs  prompt.rs  users.rs
crates/irkki-core/: CHANGELOG.md  Cargo.toml  README.md
crates/irkki-core/src/: irc_client.rs  lexer.rs  lib.rs  parser.rs
crates/irkki-core/tests/: irc_client_stub.rs
src/Irkki/: App.cs  AppScreen.cs  Program.cs
src/Irkki/Irc/: IrcClient.cs  Lexer.cs  Message.cs  Parser.cs
tests/Irkki.Tests/: Irkki.Tests.csproj  UnitTest1.cs
tests/Irkki.Tests/Irc/: IrcFixture.cs  LexerFixture.cs  ParserFixture.cs
