[package]
publish = true
name = "irkki-core"
version = "0.1.0"
description = "The irkki core library."
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = "README.md"
keywords = ["irc", "chat"]
categories = ["network-programming", "parser-implementation", "asynchronous"]

[dependencies]
log = "0.4.29"
